--- a/DSA.Tests/DSA.Tests.csproj
+++ b/DSA.Tests/DSA.Tests.csproj
@@ -21,4 +21,7 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DSA\DSA.csproj" />
+  </ItemGroup>
 </Project>
